--- a/ShoppingApplication/src/app/Components/Value/nav/nav.component.html
+++ b/ShoppingApplication/src/app/Components/Value/nav/nav.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Shopping App</a>
-    <ul class="navbar-nav mr-auto">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+
+    <a class="navbar-brand" href="#">Shopping App</a>
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -10,20 +12,17 @@
       <li class="nav-item">
         <a class="nav-link " href="#">Messages</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link " (click)= "logout()">Logout</a>
-      </li>
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light" >
-        Welcome User
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a dropdownToggle class="dropdown-toggle text-light" >
+        Welcome {{authService.decodedToken?.unique_name}}
       </a>
     
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <div *dropdownMenu  class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item" (click)= "logout()"><i class="fa fa-sign-out"></i>Logout</a>
       </div>
     </div>
 
@@ -33,10 +32,12 @@
       placeholder="Username"
       [(ngModel)] = "model.username">
       <input required class="form-control mr-sm-2" 
-      type="text" name = "password"
+      type="password" name = "password"
       placeholder="Password"
       [(ngModel)] = "model.password">
       <button [disabled] = "!loginForm.valid" class="btn btn-outline-success my-2 my-sm-0" 
       type="submit">Login</button>
     </form>
+  </div>
+  
   </nav>
