--- a/ShoppingApplication/src/app/Components/Value/nav/nav.component.html
+++ b/ShoppingApplication/src/app/Components/Value/nav/nav.component.html
@@ -35,7 +35,7 @@
       type="password" name = "password"
       placeholder="Password"
       [(ngModel)] = "model.password">
-      <button [disabled] = "!loginForm.valid" class="btn btn-outline-success my-2 my-sm-0" 
+      <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" 
       type="submit">Login</button>
     </form>
   </div>
