Edit frontend functionality done almost

--- a/ShoppingApplication/src/app/Components/Value/home/home.component.html
+++ b/ShoppingApplication/src/app/Components/Value/home/home.component.html
@@ -1,9 +1,9 @@
 <div  class="container mt-5">
   <div *ngIf="!registerMode" style="text-align: center">
     <h1>
-      Find Your Product
+      Find Your Friends
     </h1>
-    <p class="lead">Come on in to view your matches... All you need to do is SignUp</p>
+    <p class="lead">Come on in to view your matches... All you need is to do SignUp</p>
     <div class="text-center">
       <button class="btn btn-primary btn-lg mr-2" (click) = "registerToggle()">Register</button>
       <button class="btn btn-info btn-lg">Learn More</button>
