--- a/ShoppingApplication/src/app/Components/Value/nav/nav.component.html
+++ b/ShoppingApplication/src/app/Components/Value/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
 
-    <a class="navbar-brand" [routerLink]="['/home']" >Shopping App</a>
+    <a class="navbar-brand" >Friendship App</a>
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active" >
         <a class="nav-link" [routerLink]="['/members']" >Matches</a>
@@ -20,7 +20,7 @@
       </a>
     
       <div *dropdownMenu  class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+        <a class="dropdown-item" [routerLink]="['/member/edit']" ><i class="fa fa-user"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)= "logout()"><i class="fa fa-sign-out"></i>Logout</a>
       </div>
