--- a/ShoppingApplication/src/app/members/member-list/member-edit/member-edit.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-edit/member-edit.component.html
@@ -78,7 +78,7 @@
             
             </tab>
             <tab heading="Edit Photos">
-            <h4> Photo Edit will go here</h4>
+          <app-Photo-editor [photos] = "user.photos"></app-Photo-editor>
   
             </tab>
           </tabset>
