--- a/ShoppingApplication/src/app/members/member-list/member-card/member-card.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBu_YsPRBXiClnUo6ScFT2csQ1reGW4PhhIQXVXx1051THp_OM&s" alt="{{user.knownAs}}">
+    <img class="card-img-top" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button [routerLink]="['/members/', user.id]" class="btn btn-primary">
