--- a/ShoppingApplication/src/app/members/member-list/member-detail/member-detail.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-detail/member-detail.component.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-sm-4">
     <div class="card">
-      <img class="card-img-top img-thumbnail" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBu_YsPRBXiClnUo6ScFT2csQ1reGW4PhhIQXVXx1051THp_OM&s" 
+      <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" 
       alt="{{user?.knownAs}}">
       <div class="card-body">
         <div>
