--- a/ShoppingApplication/src/app/members/member-list/member-card/member-card.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-card/member-card.component.html
@@ -6,9 +6,12 @@
         <button [routerLink]="['/members/', user.id]" class="btn btn-primary">
           <i class = "fa fa-user"></i>
         </button>
-        <button class="btn btn-primary">
+        <button
+        (click)="sendLike(user.id)" 
+         class="btn btn-primary">
           <i class = "fa fa-heart"></i>
-        </button>
+        </button
+        >
         <button class="btn btn-primary">
           <i class = "fa fa-envelope"></i>
         </button>
