--- a/ShoppingApplication/src/app/members/member-list/member-list.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-list.component.html
@@ -1,7 +1,47 @@
+<form class="form-inline" novalidate>
+
+  <div class="col">
+    <div class="btn-group float-right">
+      <button type="button"
+       name="orderBy"
+       class="btn btn-primary" 
+       [(ngModel)]="userParams.orderBy"
+       (click) = "loadUsers()"
+       btnRadio="lastActive">
+       Last Active
+      </button>
+  
+      <button type="button" 
+      name="orderBy" 
+      class="btn btn-primary" 
+      [(ngModel)]="userParams.orderBy"
+      (click) = "loadUsers()"
+      btnRadio="created">
+      Newest Members
+    </button>
+    </div>
+  </div>
+  </form>
+
 <div class="container mt-5">
   <div class="row">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
      <app-member-card [user]="user"></app-member-card>
     </div>
   </div>
+</div>
+<div class="d-flex justify-content-center">
+  <pagination
+   [boundaryLinks]="true"
+   [totalItems]="pagination.totalItems"
+   [itemsPerPage]="pagination.itemsPerPage"
+   [(ngModel)]="pagination.currentPage"
+   (pageChanged)="pageChanged($event)"
+   previousText="&lsaquo;" 
+   nextText="&rsaquo;" 
+   firstText="&laquo;"
+   lastText="&raquo;">
+</pagination>
+
+
 </div>
