--- a/ShoppingApplication/src/app/members/member-list/member-card/member-card.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-card/member-card.component.html
@@ -4,15 +4,18 @@
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button [routerLink]="['/members/', user.id]" class="btn btn-primary">
-          <i class = "fa fa-user"></i>
-        </button>
+          <i class = "fa fa-user"></i></button></li>
+          <li class="list-inline-item">
         <button
         (click)="sendLike(user.id)" 
          class="btn btn-primary">
           <i class = "fa fa-heart"></i>
         </button
-        >
-        <button class="btn btn-primary">
+        ></li>
+        <li class="list-inline-item">
+        <button class="btn btn-primary"
+        [routerLink]="['/members/' , user.id]" 
+        [queryParams] = "{tab: 3}" >
           <i class = "fa fa-envelope"></i>
         </button>
       </li>
