--- a/ShoppingApplication/src/app/members/member-list/member-detail/member-detail.component.html
+++ b/ShoppingApplication/src/app/members/member-list/member-detail/member-detail.component.html
@@ -30,16 +30,19 @@
             <button class="btn btn-primary w-100">
               Like
             </button>
-            <button class="btn btn-success w-100">
+            <button
+         
+            class="btn btn-success w-100" (click) = "selectTab(3)" >
               Message
-            </button>
+            </button
+            >
           </div>
         </div>
     </div>
   </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset class="member-tabset">
+        <tabset class="member-tabset" #staticTabs>
           <tab heading = "About {{user?.knownAs}}">
             <h4>
               Description
@@ -67,9 +70,7 @@
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
-            <p>
-              Messages will go here
-            </p>
+          <app-member-messages [recipientId] = "user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
